packages/beff-wasm/fixtures/errors/qualified-context/t1.ts
import { Param } from "./t2";

export { Param } from "./t2";
